<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              tools:ignore="RtlHardcoded"
              android:theme="@style/AppTheme">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary"
            app:title="@string/registration_txt">

        <ImageView
                android:id="@+id/bank_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:layout_gravity="right"
                android:layout_marginRight="20dp"
                android:src="@drawable/ic_bank_logo"/>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
                android:id="@+id/regPhoneInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                    style="@style/Widget.AppCompat.EditText"
                    android:drawableLeft="@drawable/ic_person"
                    android:id="@+id/countryCodeEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#cccbcb"
                    android:hint="@string/phone_number"
                    android:inputType="phone" />

        </android.support.design.widget.TextInputLayout>


        <EditText
                android:id="@+id/regEmailInput"
                style="@style/Widget.AppCompat.EditText"
                android:drawableLeft="@drawable/ic_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/email_txt"
                android:inputType="textEmailAddress"
                android:drawablePadding="10dp"
                android:textColorHint="#cccbcb"/>

        <EditText
                android:id="@+id/regNameInput"
                style="@style/Widget.AppCompat.EditText"
                android:drawableLeft="@drawable/ic_person"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/name_txt"
                android:drawablePadding="10dp"
                android:textColorHint="#cccbcb"/>

        <EditText
                android:id="@+id/regLastNameInput"
                style="@style/Widget.AppCompat.EditText"
                android:drawableLeft="@drawable/ic_person"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/last_name_txt"
                android:drawablePadding="10dp"
                android:textColorHint="#cccbcb"/>

        <!--<DatePicker-->
                <!--android:id="@+id/regDateOfBirthdayInput"-->
                <!--style="@style/Widget.AppCompat.EditText"-->
                <!--android:drawableLeft="@drawable/ic_person"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_centerHorizontal="true"-->
                <!--android:layout_marginTop="20dp"-->
                <!--android:hint="@string/last_name_txt"-->
                <!--android:drawablePadding="10dp"-->
                <!--android:textColorHint="#cccbcb"/>-->
        <EditText
                android:id="@+id/regDateOfBirthdayInput"
                style="@style/Widget.AppCompat.EditText"
                android:drawableLeft="@drawable/ic_person"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/date_of_birthday_txt"
                android:drawablePadding="10dp"
                android:textColorHint="#cccbcb"
                android:text="18/02/1993"/>


        <EditText
                android:id="@+id/regPasswordInput"
                style="@style/Widget.AppCompat.EditText"
                android:drawableLeft="@drawable/ic_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/password_txt"
                android:inputType="textPassword"
                android:drawablePadding="10dp"
                android:textColorHint="#cccbcb"/>

        <EditText
                android:id="@+id/regPasswordAgainInput"
                style="@style/Widget.AppCompat.EditText"
                android:drawableLeft="@drawable/ic_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/password_again_txt"
                android:inputType="textPassword"
                android:drawablePadding="10dp"
                android:textColorHint="#cccbcb"/>


        <Button
                android:id="@+id/registrationButton"
                style="@style/ActionButton"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/registration_txt"
                android:textSize="20sp"/>
    </LinearLayout>



</LinearLayout>