<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              tools:ignore="RtlHardcoded"
              android:theme="@style/AppTheme">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary"
            app:title="@string/sign_in">

        <ImageView
                android:id="@+id/bank_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:layout_gravity="right"
                android:src="@drawable/ic_bank_logo"/>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">


        <EditText
                android:id="@+id/phoneInput"
                style="@style/Widget.AppCompat.EditText"
                android:drawableLeft="@drawable/ic_person"
                android:drawablePadding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#cccbcb"
                android:inputType="phone"
                android:hint="@string/phone_number"/>

        <EditText
                android:id="@+id/passwordInput"
                style="@style/Widget.AppCompat.EditText"
                android:drawableLeft="@drawable/ic_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:drawablePadding="10dp"
                android:textColorHint="#cccbcb"/>

        <CheckBox
                android:id="@+id/displayPasswordCheckbox"
                android:text="@string/display_a_password_chbx"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <Button
                android:id="@+id/loginButton"
                style="@style/ActionButton"
                android:layout_gravity="right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/login_txt"
                android:textSize="20sp"/>
    </LinearLayout>


</LinearLayout>