<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:layout_marginTop="20dp"
              android:layout_margin="20dp">

    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="10dp"
            android:id="@+id/extraSectionView"
            android:orientation="vertical">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cardLabel"
                android:text="*4308 07/21"
                android:textSize="18sp"
                android:fontFamily="@string/font_family_light"/>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/actionLabel"
                    android:text="@string/recipient_txt"
                    android:textSize="14sp"
                    android:fontFamily="@string/font_family_light"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:id="@+id/accountLabel"
                    android:text="PAVLOV OLEG"
                    android:textSize="18sp"
                    android:fontFamily="@string/font_family_light"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">

        <ImageView
                android:id="@+id/transferType"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_mastercard_128"
                android:contentDescription="@string/card_type_descr"/>

        <TextView
                android:id="@+id/actionDescr"
                android:layout_gravity="left"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="With a debit card (also known as a bank card, check card or some other description) when a cardholder makes a purchase"
                android:textSize="14sp"
                android:layout_marginStart="10dp"/>

    </LinearLayout>

    <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="10dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:id="@+id/recordAmount"
                android:text="-60 UAH"
                android:textSize="24sp"
                android:fontFamily="@string/font_family_light"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:id="@+id/actionTimestamp"
                android:text="14.12.18 04:24"
                android:textSize="14sp"
                android:fontFamily="@string/font_family_light"/>

    </RelativeLayout>


</LinearLayout>