<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              tools:ignore="RtlHardcoded"
              android:theme="@style/AppTheme">

    <android.support.v7.widget.Toolbar
            android:id="@+id/cardMenuToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary"
            app:title="@string/bank_service_transfer_money">

        <ImageView
                android:id="@+id/bank_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:layout_gravity="right"
                android:layout_marginRight="20dp"
                android:src="@drawable/ic_bank_logo"/>
    </android.support.v7.widget.Toolbar>


    <TextView
            android:id="@+id/toCardLabel"
            android:layout_margin="20dp"
            android:layout_gravity="bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Card type: "
            android:textSize="18sp"
            android:textColor="@color/secondary_text"
            android:layout_marginStart="10dp"
    />

    <Spinner
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:id="@+id/cardType"
            android:layout_width="fill_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="80dp"
            android:entries="@array/cardTypes"
    />


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="20dp"
                  android:layout_marginBottom="20dp"
                  android:orientation="horizontal">

        <TextView
                android:id="@+id/currencyLabel"
                android:layout_gravity="center"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:text="Currency"
                android:textSize="18sp"
                android:layout_marginStart="30dp"/>

        <Spinner
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:id="@+id/currencySpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center"
                android:layout_margin="20dp"
                android:textSize="24sp"
        />
    </LinearLayout>

    <EditText
            android:id="@+id/passwordInput"
            style="@style/Widget.AppCompat.EditText"
            android:drawableLeft="@drawable/ic_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/password_txt"
            android:inputType="textPassword"
            android:drawablePadding="10dp"
            android:textColorHint="#cccbcb"/>

    <CheckBox
            android:id="@+id/displayPasswordCheckbox"
            android:text="@string/display_a_password_chbx"
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    <Button
            android:id="@+id/confirmButton"
            style="@style/ActionButton"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="Confirm"
            android:textSize="20sp"/>


</LinearLayout>